--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "devStart": "nodemon listings.ts",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
