--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "install": "^0.13.0",
     "lucide-react": "^0.395.0",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
+    "npm": "^10.8.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-number-format": "^5.4.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
