--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-number-format": "^5.4.0",
+    "react-router-dom": "^6.24.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
