--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.1.0",
@@ -38,6 +39,7 @@
     "npm": "^10.8.1",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.52.0",
     "react-number-format": "^5.4.0",
     "react-router-dom": "^6.24.0",
     "server-only": "^0.0.1",
