--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
     "devStart": "nodemon listings.ts",
-    "dev": "next dev",
+    "dev": "next",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
